@@ -34,7 +34,10 @@
  ******************************************************************************
  *
  * $Log$
- * Revision 1.54  2007-11-15 00:12:47  mloskot
+ * Revision 1.55  2007-11-21 22:39:56  fwarmerdam
+ * close shx file in readonly mode (GDAL #1956)
+ *
+ * Revision 1.54  2007/11/15 00:12:47  mloskot
  * Backported recent changes from GDAL (Ticket #1415) to Shapelib.
  *
  * Revision 1.53  2007/11/14 22:31:08  fwarmerdam
@@ -291,6 +294,15 @@ void SHPWriteHeader( SHPHandle psSHP )
     int32	i32;
     double	dValue;
     int32	*panSHX;
+    
+    if (psSHP->fpSHX == NULL)
+    {
+#ifdef USE_CPL
+        CPLError( CE_Failure, CPLE_NotSupported, 
+                  "SHPWriteHeader failed : SHX file is closed");
+#endif
+        return;
+    }
 
 /* -------------------------------------------------------------------- */
 /*      Prepare header block for .shp file.                             */
@@ -654,6 +666,13 @@ SHPOpen( const char * pszLayer, const char * pszAccess )
 
 	return( NULL );
     }
+    
+    /* In read-only mode, we can close the SHX now */
+    if (strcmp(pszAccess, "rb") == 0)
+    {
+        fclose( psSHP->fpSHX );
+        psSHP->fpSHX = NULL;
+    }
 
     for( i = 0; i < psSHP->nRecords; i++ )
     {
@@ -698,7 +717,8 @@ SHPClose(SHPHandle psSHP )
     free( psSHP->panRecOffset );
     free( psSHP->panRecSize );
 
-    fclose( psSHP->fpSHX );
+    if ( psSHP->fpSHX != NULL)
+        fclose( psSHP->fpSHX );
     fclose( psSHP->fpSHP );
 
     if( psSHP->pabyRec != NULL )
